--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: 2.0.5
   expandable: 5.0.1
   file_picker: 5.2.6
+  firebase_messaging:
   fl_chart: 0.55.0
   flip_card: 0.6.0
   flutter_animate: 4.1.1+1
