--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,6 @@ dependencies:
   flutter_spinkit: 5.1.0
   font_awesome_flutter: 10.1.0
   from_css_color: 2.0.0
-  geocoding: ^2.1.0
   geolocator: 9.0.1
   geolocator_android: 4.1.0
   geolocator_apple: 2.2.1
@@ -96,6 +95,7 @@ dependencies:
   shared_preferences_web: 2.1.0
   socket_io_client: ^2.0.3+1
   sqflite: 2.2.6
+  styled_divider: 1.0.4
   timeago: 3.2.2
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
