--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -169,7 +169,7 @@ flutter:
   fonts:
     - family: 'gothom'
       fonts:
-        - asset: assets/fonts/GothamBold.ttf
+        - asset: assets/fonts/2vqf7_
           weight: 700
     - family: 'logo'
       fonts:
