--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,9 +1,9 @@
 flutter_native_splash:
   color: "#F36121"
-  color_dark: "#4B39EF"
+  color_dark: "#F36121"
   android_12:
     color: "#F36121"
-    color_dark: "#4B39EF"
+    color_dark: "#F36121"
   android: true
   ios: true
   web: true
