--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,9 +1,9 @@
 flutter_native_splash:
-  color: "#F36121"
-  color_dark: "#F36121"
+  color: "#FFFFFF"
+  color_dark: "#FFFFFF"
   android_12:
-    color: "#F36121"
-    color_dark: "#F36121"
+    color: "#FFFFFF"
+    color_dark: "#FFFFFF"
   android: true
   ios: true
   web: true
